--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <!-- templates/dashboard.html -->
 <!DOCTYPE html>
 <html>
@@ -11,11 +14,6 @@
     <div class="dashboard-container">
         <header>
             <h2>Bienvenido, {{ username }}</h2>
-            <nav>
-                <a href="{{ url_for('survey') }}" class="edit-preferences">Editar Preferencias</a>
-                <a href="{{ url_for('track') }}">[Track]</a>
-                <a href="{{ url_for('logout') }}">[Cerrar Sesión]</a>
-            </nav>
         </header>
 
         <div class="preferences-summary">
@@ -39,7 +37,9 @@
                     {% endfor %}
                 </ul>
             </section>
+            
         </div>
     </div>
 </body>
 </html>
+{% endblock %}
