--- a/static/style.css
+++ b/static/style.css
@@ -18,11 +18,16 @@ body {
     width: 300px;
 }
 
+h1 {
+    font-weight: bold;
+}
+
 h2 {
     text-align: center;
     color: #333;
     font-weight: bold;
-    margin-top: 50px;
+    margin: 0 auto;
+    margin-top: 30px;
 }
 
 input[type="text"],
