--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark animate__animated animate__fadeIn">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('dashboard') }}">🏋️ Fitness Tracker</a>
+            <a class="navbar-brand" href="{{ url_for('dashboard') }}">🏋️ GYM & DATA</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
