--- a/templates/track.html
+++ b/templates/track.html
@@ -10,7 +10,8 @@
     </head>
     <body>
 <div class="content">
-    <h2>Registro de Peso y Medidas</h2>
+    <div class="dashboard-container"><header>
+    <h2>Registro de Peso y Medidas</h2></header>
     
     {% if msg %}
     <div class="alert alert-success">{{ msg }}</div>
